--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,7 +12,7 @@
 		"react-scripts": "3.4.1"
 	},
 	"scripts": {
-		"start": "npm install && npm run build && node server.js",
+		"start": "npm install && node server.js",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
